@@ -3,6 +3,9 @@ CHANGES-1.4.txt
 
 CHANGES IN CUPS V1.4.3
 
+	- When adding printers from the web interface, the dynamic updates of
+	  the device list made it hard to pick a device (STR #3406)
+	- Fixed a typo in the web interface admin page template (STR 3403)
 	- The web interface did not preserve the "printer is shared" state when
 	  modifying a printer (STR #3390)
 	- The PPD compiler incorrectly inserted translations of empty strings
